@@ -1,6 +1,8 @@
 
 HEAD
 ====
+Fixes:
+- SYSRQ: fix double target initialization at module load
 Enhancements:
 - TARPIT gained IPv6 support
 
